fixed timezones and working on mobile checkbox now

--- a/task_planner_react/src/MobileStyling.css
+++ b/task_planner_react/src/MobileStyling.css
@@ -154,6 +154,13 @@ div.mobileOnly div.buffer.description {
 }
 div.mobileOnly .custom-checkbox {
   margin-right: 3.5vw;
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  border-radius: 50%;
+  border: 2px solid #a4a4a4;
+  cursor: pointer;
+  align-self: center;
 }
 div.mobileOnly div.bottomRow {
   display: flex;
